--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
-envlist = py26, py27, py33, py34, py35, pypy
+envlist#= py26, py27, py33, py34, py35, pypy
 
 [testenv]
 deps = nose
 commands = nosetests --verbose
+ 
