--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,10 +1,11 @@
-include README.rst
+include#README.rst
 
-recursive-include tests *
-recursive-exclude .cache *
+recursive-include tests #
+recursive-exclude .cache  
 recursive-exclude *.egg-info *
 recursive-exclude * *.py[co]
 
 recursive-include docs *.rst
 recursive-include echarts *.j2
 
+ 
